# StoSpa

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  fiboheap_error.txt  machines.txt  main.cpp
Benchmarking/: benchmarking.cpp
Misc/: DiffEqAnalytic.cpp  DiffEqAnalytic.hpp  Grid.cpp  Grid.hpp  Parameters.cpp  Parameters.hpp  Utilities.cpp  Utilities.hpp  VectorFunctions.cpp  VectorFunctions.hpp  Version.hpp.in  Voxel.cpp  Voxel.hpp
Plots/: ErrorAgainstAlpha.cpp  ErrorAgainstBeta.cpp  ErrorAgainstKappa.cpp  MichaelisMentinKinetics.cpp  TwoSpeciesDecayDist.cpp  error_against_beta.cpp
Python/: data.py  jump_rates.py  parameters.py  plot.py  plot_benchmarks.py  plot_error_against_alpha.py  plot_error_against_beta.py  plot_error_against_kappa.py  plot_peaks.py  plot_power_spectra.py  plot_stationary_dist.py  positions.py  settings.json  sto_plot.py
Reactions/: AbstractReaction.cpp  AbstractReaction.hpp  Decay.cpp  Decay.hpp  DiffusionPeriodic.cpp  DiffusionPeriodic.hpp  DiffusionReflective.cpp  DiffusionReflective.hpp  DiffusionReflectiveExp.hpp  Dimerisation.cpp  Dimerisation.hpp  Extrande.hpp  GrayScott.cpp  GrayScott.hpp  MichaelisMentin.cpp  MichaelisMentin.hpp  MichaelisMentinReduced.cpp  MichaelisMentinReduced.hpp  None.hpp  Production.cpp  Production.hpp  Schnakenberg.cpp  Schnakenberg.hpp  TwoSpeciesDecay.cpp  TwoSpeciesDecay.hpp
Simulation/: AbstractSimulation.cpp  AbstractSimulation.hpp  JumpRates.cpp  JumpRates.hpp  SimFunctions.cpp  SimFunctions.hpp  Simulation_1d.cpp  Simulation_1d.hpp  Simulation_2d.cpp  Simulation_2d.hpp
Simulations/: error_against_alpha.cpp  error_against_beta.cpp  error_against_kappa.cpp  example.cpp  growing_domain.cpp  michaelis_mentin_kinetics.cpp  schnakenberg.cpp  simple_diffusion.cpp  two_species_decay.cpp
Simulator/: AbstractSimulation.cpp  AbstractSimulation.hpp  Grid.cpp  Grid.hpp  GrowthRates.cpp  GrowthRates.hpp  JumpRates.cpp  JumpRates.hpp  Simulation1d.cpp  Simulation1d.hpp  Simulation2d.cpp  Simulation2d.hpp  Simulation_1d.cpp  Simulation_1d.hpp  Simulation_2d.cpp  Simulation_2d.hpp  Simulator.hpp
Tests/: TestMisc.cpp  TestReactions.cpp  TestSimulation.cpp  UnitTests.cpp  catch.hpp
